# tak_chat

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: tak_chat.yaml
include/tak_chat/: tak_chat_interface.h  tak_chat_node.hpp
launch/: tak_chat.launch.py
msg/: TakChat.msg
scripts/: cot_monitor.py  tak_chat_console.py  tak_chat_test.py  tak_chat_test_until_send_to_tak.py
src/: tak_chat_node.cpp
