<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tak_chat</name>
  <version>0.1.0</version>
  <description>Behavior Tree mission execution with TAK chat communication</description>
  <maintainer email="tyler.errico@westpoint.edu">Tyler Errico</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>sensor_msgs</depend>
  <!-- Uncomment if using BT ROS2 service/action integration -->
  <!-- <depend>behaviortree_ros2</depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
